Refactored code - add overflow, markers filter

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="panel-heading">
                     Instagram pictures
                 </div>
-                <div class="panel-body">
+                <div class="panel-body overflow">
                     <strong id="igInfo">Select A Restaurant from the list on the left</strong>
                     <div class="img-responsive" id="imageArea"></div>
                 </div>
