--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dLabel2">
                     <div class="panel-body overflow">
-                        <strong id="igInfo">Select a restaurant to view the latest Instagram pictures.</strong>
+                        <strong id="igInfo">Select a restaurant to view the latest Instagram pictures</strong>
                         <div class="img-responsive" id="imageArea" data-bind="foreach: igImages">
                             <img data-bind="attr:{src: $data}" />
                         </div>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCylZwYSHW3IQJlTiknjrRv76_9xgFu-5U"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCylZwYSHW3IQJlTiknjrRv76_9xgFu-5U&callback=initMap" async defer></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/knockout/dist/knockout.js"></script>
