--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
 <body>
     <div class="container">
         <div class="row search">
-            <div class="dropdown">
-                <button class="btn btn-primary" id="dLabel1" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Search Brunch on Brookside
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dLabel1">
-                    <div class="panel-body">
-                        <form>
-                            <div class="form-group">
-                                <input class="form-control" data-bind="value: search, valueUpdate: 'afterkeydown'" id="searchbar" name="searchbar" placeholder="Filter Brookside Brunch Joints" type="text">
-                            </div>
-                        </form>
-                        <strong>Select a restaurant from the list to view details and the latest Instagram pictures</strong>
-                        <hr>
-                        <ul class="pointer" data-bind="foreach: filteredItems">
-                            <li data-bind="text: $data.name, click: $parent.setPlace"></li>
-                        </ul>
-                    </div>
-                </ul>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Brunch on Brookside
+                </div>
+                <div class="panel-body">
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" data-bind="value: search, valueUpdate: 'afterkeydown'" id="searchbar" name="searchbar" placeholder="Filter Brookside Brunch Joints" type="text">
+                        </div>
+                    </form>
+                    <strong>Select a restaurant from the list to view details and the latest Instagram pictures</strong>
+                    <hr>
+                    <ul class="pointer" data-bind="foreach: filteredItems">
+                        <li data-bind="text: $data.name, click: $parent.setPlace"></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="row pictures">
